tests/errors/syntax/expected_colon_in_conditional_expr.c
// Expected ':' in conditional expression
void main()
{
	int b = 1 == 0 ? 10 10;
	printid(b);
}
